--- a/jbm-framework-dependencies/pom.xml
+++ b/jbm-framework-dependencies/pom.xml
@@ -3,14 +3,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.jbm</groupId>
-    <version>5.0.0-SNAPSHOT</version>
+    <version>5.1.3-SNAPSHOT</version>
     <artifactId>jbm-framework-dependencies</artifactId>
     <packaging>pom</packaging>
     <parent>
         <!-- Import dependency management from Spring Boot -->
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-parent</artifactId>
-        <version>2.0.2.RELEASE</version>
+        <version>2.1.3.RELEASE</version>
     </parent>
     <distributionManagement>
         <repository>
@@ -42,8 +42,8 @@
         <java.version>1.8</java.version>
         <jdk.version>1.8</jdk.version>
         <jbm.framework.version>5.0.0-SNAPSHOT</jbm.framework.version>
-        <spring.cloud.version>Finchley.SR2</spring.cloud.version>
-        <spring.boot.version>2.0.2.RELEASE</spring.boot.version>
+        <spring.cloud.version>Greenwich.RELEASE</spring.cloud.version>
+        <spring.boot.version>2.1.3.RELEASE</spring.boot.version>
         <druid.version>1.1.12</druid.version>
         <dubbo.version>2.6.4</dubbo.version>
         <fastjson.version>1.2.51</fastjson.version>
@@ -91,13 +91,13 @@
     <dependencyManagement>
         <dependencies>
             <!-- spring cloud -->
-            <dependency>
+            <!--<dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
                 <version>${spring.cloud.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
-            </dependency>
+            </dependency>-->
             <!--<dependency>
                 <groupId>org.springframework.security</groupId>
                 <artifactId>spring-security-bom</artifactId>
@@ -112,13 +112,13 @@
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>-->
-            <dependency>
+            <!--<dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
                 <version>${spring.boot.version}</version>
                 <scope>import</scope>
                 <type>pom</type>
-            </dependency>
+            </dependency>-->
             <!--<dependency>
                 <groupId>org.apache.logging.log4j</groupId>
                 <artifactId>log4j-bom</artifactId>
@@ -130,7 +130,7 @@
             <dependency>
                 <groupId>de.codecentric</groupId>
                 <artifactId>spring-boot-admin</artifactId>
-                <version>1.3.2</version>
+                <version>2.1.3</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -499,7 +499,7 @@
             <!-- </exclusion> -->
             <!-- </exclusions> -->
             <!-- </dependency> -->
-            <dependency>
+            <!--<dependency>
                 <groupId>org.apache.curator</groupId>
                 <artifactId>curator-framework</artifactId>
                 <version>2.8.0</version>
@@ -519,9 +519,9 @@
                 <artifactId>curator-test</artifactId>
                 <version>2.8.0</version>
                 <scope>test</scope>
-            </dependency>
+            </dependency>-->
             <!-- web -->
-            <dependency>
+           <!-- <dependency>
                 <groupId>taglibs</groupId>
                 <artifactId>standard</artifactId>
                 <version>1.1.2</version>
@@ -536,6 +536,7 @@
                 <artifactId>jstl</artifactId>
                 <version>1.1.2</version>
             </dependency>
+            -->
             <dependency>
                 <groupId>javax.annotation</groupId>
                 <artifactId>javax.annotation-api</artifactId>
