--- a/jbm-framework/jbm-framework-cloud/jbm-framework-cloud-gateway/pom.xml
+++ b/jbm-framework/jbm-framework-cloud/jbm-framework-cloud-gateway/pom.xml
@@ -3,10 +3,14 @@
 	<parent>
 		<groupId>com.jbm</groupId>
 		<artifactId>jbm-framework-cloud</artifactId>
-		<version>5.0.0-SNAPSHOT</version>
+		<version>5.1.3-SNAPSHOT</version>
 	</parent>
 	<artifactId>jbm-framework-cloud-gateway</artifactId>
 	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-gateway</artifactId>
