--- a/jbm-framework/jbm-framework-cloud/jbm-framework-cloud-monitor/pom.xml
+++ b/jbm-framework/jbm-framework-cloud/jbm-framework-cloud-monitor/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>com.jbm</groupId>
 		<artifactId>jbm-framework-cloud</artifactId>
-		<version>5.0.0-SNAPSHOT</version>
+		<version>5.1.3-SNAPSHOT</version>
 	</parent>
 	<artifactId>jbm-framework-cloud-monitor</artifactId>
 	<dependencies>
@@ -21,12 +21,12 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-eureka</artifactId>
+			<artifactId>spring-cloud-netflix-eureka-client</artifactId>
 		</dependency>
-		<dependency>
+		<!--<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-zuul</artifactId>
-		</dependency>
+		</dependency>-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
