--- a/jbm-framework/jbm-framework-micro/jbm-framework-micro-service/pom.xml
+++ b/jbm-framework/jbm-framework-micro/jbm-framework-micro-service/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>com.jbm</groupId>
 		<artifactId>jbm-framework-micro</artifactId>
-		<version>5.0.0-SNAPSHOT</version>
+		<version>5.1.3-SNAPSHOT</version>
 	</parent>
 	<properties>
 		<resteasy.version>3.0.7.Final</resteasy.version>
@@ -95,16 +95,16 @@
 			<scope>test</scope>
 		</dependency>
 		<!-- spring cloud -->
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-core</artifactId>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
+		<!--<dependency>-->
+			<!--<groupId>org.springframework.cloud</groupId>-->
+			<!--<artifactId>spring-cloud-core</artifactId>-->
+			<!--<scope>provided</scope>-->
+		<!--</dependency>-->
+		<!--<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-spring-service-connector</artifactId>
 			<scope>provided</scope>
-		</dependency>
+		</dependency>-->
 		<!-- dubbo rest -->
 		<!-- <dependency> -->
 		<!-- <groupId>org.apache.cxf</groupId> -->
