--- a/jbm-framework-dependencies/pom.xml
+++ b/jbm-framework-dependencies/pom.xml
@@ -41,7 +41,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
         <jdk.version>1.8</jdk.version>
-        <jbm.framework.version>5.0.0-SNAPSHOT</jbm.framework.version>
+        <jbm.framework.version>5.1.3-SNAPSHOT</jbm.framework.version>
         <spring.cloud.version>Greenwich.RELEASE</spring.cloud.version>
         <spring.boot.version>2.1.3.RELEASE</spring.boot.version>
         <druid.version>1.1.12</druid.version>
@@ -65,7 +65,7 @@
         <mybatis-spring-boot.version>1.3.2</mybatis-spring-boot.version>
         <hutool.version>4.2.1</hutool.version>
         <beetl.version>2.9.6</beetl.version>
-        <spring-boot-admin.version>2.1.1</spring-boot-admin.version>
+        <spring-boot-admin.version>2.1.3</spring-boot-admin.version>
         <lombok.version>1.18.4</lombok.version>
     </properties>
     <repositories>
@@ -127,13 +127,13 @@
                 <scope>import</scope>
             </dependency>-->
             <!-- spring admin -->
-            <dependency>
+            <!--<dependency>
                 <groupId>de.codecentric</groupId>
                 <artifactId>spring-boot-admin</artifactId>
                 <version>2.1.3</version>
                 <type>pom</type>
                 <scope>import</scope>
-            </dependency>
+            </dependency>-->
             <dependency>
                 <groupId>org.apache.camel</groupId>
                 <artifactId>camel-parent</artifactId>
