--- a/jbm-framework-dependencies/pom.xml
+++ b/jbm-framework-dependencies/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <!-- Import dependency management from Spring Boot -->
         <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-parent</artifactId>
+        <artifactId>spring-boot-dependencies</artifactId>
         <version>2.1.3.RELEASE</version>
     </parent>
     <distributionManagement>
