--- a/jbm-framework/jbm-framework-autoconfigure/jbm-framework-autoconfigure-dubbo/pom.xml
+++ b/jbm-framework/jbm-framework-autoconfigure/jbm-framework-autoconfigure-dubbo/pom.xml
@@ -23,6 +23,7 @@
 					<artifactId>slf4j-api</artifactId>
 				</exclusion>
 			</exclusions>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
