--- a/jbm-framework/jbm-framework-autoconfigure/jbm-framework-autoconfigure-mybatis/pom.xml
+++ b/jbm-framework/jbm-framework-autoconfigure/jbm-framework-autoconfigure-mybatis/pom.xml
@@ -42,6 +42,12 @@
             <artifactId>jbm-framework-spring</artifactId>
             <scope>compile</scope>
         </dependency>
-    </dependencies>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>5.1.5.RELEASE</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 
 </project>
