--- a/jbm-framework/jbm-framework-cloud/pom.xml
+++ b/jbm-framework/jbm-framework-cloud/pom.xml
@@ -14,7 +14,7 @@
         <module>jbm-framework-cloud-config</module>
         <module>jbm-framework-cloud-registry</module>
         <module>jbm-framework-cloud-gateway</module>
-        <module>jbm-framework-cloud-monitor</module>
+        <!--<module>jbm-framework-cloud-monitor</module>-->
         <module>jbm-framework-cloud-node</module>
         <!--测试程序不需要集成-->
         <module>jbm-framework-cloud-service-a</module>
